[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipchecker"
version = "0.1.0"
description = "IP reputation checker using AbuseIPDB (v2) and VirusTotal (v3)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Maxime Racette"}]
dependencies = [
  "requests>=2.31.0",
  "ipwhois>=1.2.0",
  "vt-py>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
]

[project.scripts]
ipchecker = "ipchecker.cli:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
